carousel changed to horizontal scroll to avoid modal issues

--- a/client/src/components/UserCard/UserCard.scss
+++ b/client/src/components/UserCard/UserCard.scss
@@ -22,85 +22,142 @@
   padding: 5px;
 }
 
-@media (min-width: 768px) {
-  /* show 3 items */
-  .carousel-inner .active,
-  .carousel-inner .active + .carousel-item,
-  .carousel-inner .active + .carousel-item + .carousel-item {
+.scrolling-wrapper {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+
+  .card {
     display: inline-block;
   }
-
-  .carousel-inner {
-    display: inline-flex;
-    justify-content: center;
-  }
-
-  .carousel-inner
-    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
-  .carousel-inner
-    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)
-    + .carousel-item,
-  .carousel-inner
-    .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)
-    + .carousel-item
-    + .carousel-item {
-    transition: none;
-  }
-
-  .carousel-inner .carousel-item-next,
-  .carousel-inner .carousel-item-prev {
-    position: relative;
-    // transform: translate3d(0, 0, 0);
-  }
-
-  .carousel-inner
-    .active.carousel-item
-    + .carousel-item
-    + .carousel-item
-    + .carousel-item {
-    position: absolute;
-    top: 0;
-    right: -33.3333%;
-    z-index: -1;
-    display: block;
-    visibility: visible;
-  }
-
-  /* left or forward direction */
-  .active.carousel-item-left + .carousel-item-next.carousel-item-left,
-  .carousel-item-next.carousel-item-left + .carousel-item,
-  .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
-  .carousel-item-next.carousel-item-left
-    + .carousel-item
-    + .carousel-item
-    + .carousel-item {
-    position: relative;
-    // transform: translate3d(-100%, 0, 0);
-    visibility: visible;
-  }
-
-  /* farthest right hidden item must be abso position for animations */
-  .carousel-inner .carousel-item-prev.carousel-item-right {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    display: block;
-    visibility: visible;
-  }
-
-  /* right or prev direction */
-  .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
-  .carousel-item-prev.carousel-item-right + .carousel-item,
-  .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
-  .carousel-item-prev.carousel-item-right
-    + .carousel-item
-    + .carousel-item
-    + .carousel-item {
-    position: relative;
-    // transform: translate3d(100%, 0, 0);
-    visibility: visible;
-    display: block;
-    visibility: visible;
-  }
 }
+
+.flex-container {
+  margin: 5px;
+  width: 100%;
+  height: 100%;
+  white-space: nowrap;
+}
+
+.item {
+  width: 120px;
+}
+
+/* Flex */
+.flex {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow: auto;
+}
+.flex-item {
+  flex: 0 0 auto;
+}
+
+// .horizontal-scrollable > .row {
+//   overflow-x: auto;
+//   white-space: nowrap;
+// }
+
+// .horizontal-scrollable > .row > .col-xs-4 {
+//   display: inline-block;
+//   float: none;
+// }
+// /* Decorations */
+
+// .col-xs-4 {
+//   color: white;
+//   font-size: 24px;
+//   padding-bottom: 20px;
+//   padding-top: 18px;
+// }
+
+// .col-xs-4:nth-child(2n + 1) {
+//   background: green;
+// }
+
+// .col-xs-4:nth-child(2n + 2) {
+//   background: black;
+// }
+
+// @media (min-width: 768px) {
+//   /* show 3 items */
+//   .carousel-inner .active,
+//   .carousel-inner .active + .carousel-item,
+//   .carousel-inner .active + .carousel-item + .carousel-item {
+//     display: inline-block;
+//   }
+
+//   .carousel-inner {
+//     display: inline-flex;
+//     justify-content: center;
+//   }
+
+//   .carousel-inner
+//     .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+//   .carousel-inner
+//     .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)
+//     + .carousel-item,
+//   .carousel-inner
+//     .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left)
+//     + .carousel-item
+//     + .carousel-item {
+//     transition: none;
+//   }
+
+//   .carousel-inner .carousel-item-next,
+//   .carousel-inner .carousel-item-prev {
+//     position: relative;
+//     // transform: translate3d(0, 0, 0);
+//   }
+
+//   .carousel-inner
+//     .active.carousel-item
+//     + .carousel-item
+//     + .carousel-item
+//     + .carousel-item {
+//     position: absolute;
+//     top: 0;
+//     right: -33.3333%;
+//     z-index: -1;
+//     display: block;
+//     visibility: visible;
+//   }
+
+//   /* left or forward direction */
+//   .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+//   .carousel-item-next.carousel-item-left + .carousel-item,
+//   .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
+//   .carousel-item-next.carousel-item-left
+//     + .carousel-item
+//     + .carousel-item
+//     + .carousel-item {
+//     position: relative;
+//     // transform: translate3d(-100%, 0, 0);
+//     visibility: visible;
+//   }
+
+//   /* farthest right hidden item must be abso position for animations */
+//   .carousel-inner .carousel-item-prev.carousel-item-right {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     z-index: -1;
+//     display: block;
+//     visibility: visible;
+//   }
+
+//   /* right or prev direction */
+//   .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+//   .carousel-item-prev.carousel-item-right + .carousel-item,
+//   .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
+//   .carousel-item-prev.carousel-item-right
+//     + .carousel-item
+//     + .carousel-item
+//     + .carousel-item {
+//     position: relative;
+//     // transform: translate3d(100%, 0, 0);
+//     visibility: visible;
+//     display: block;
+//     visibility: visible;
+//   }
+// }
